welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:26: error: type mismatch;
 found   : Unit
 required: Boolean
  }
  ^